minitrace-macro/tests/ui/err/has-ident-arguments.stderr
error: expected `=`
 --> tests/ui/err/has-ident-arguments.rs:3:10
  |
3 | #[trace(a, b)]
  |          ^
